--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <!--Main container-->
-<div class="main container">
+<div class="main department">
     <!--Main content section-->
     <div class="main-content-section">
     <!--About me-->
